add additional links to webppage

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -13,7 +13,7 @@
       <li>
         <a href="http://www.example.com/christopher.html">
           My brother <strong>Christopher</strong>
-          <img src="img/christopher.jpeg" alt="A photo of Christopher.">
+          <img src="img/christopher.jpeg" width=100 height=100 alt="A photo of Christopher.">
         </a>
       </li>
       <li>
@@ -22,13 +22,13 @@
           <li>
             <a href="http://www.example.com/steve.html">
               <strong>Steve</strong>
-              <img src="img/steve.jpeg" alt="A photo of Steve.">
+              <img src="img/steve.jpeg" height=100 width="100" " alt="A photo of Steve.">
             </a>
           </li>
           <li>
             <a href="http://www.example.com/carol.html">
               <strong>Carol</strong>
-              <<img src="img/carol.jpeg" alt="A photo of Carol.">
+              <<img src="img/carol.jpeg" width=100 height=100 alt="A photo of Carol.">
             </a>
           </li>
         </ul>
@@ -36,11 +36,15 @@
       <li>
         <a href="http://www.example.com/jessica.html">
           My friend <strong>Jessica</strong>
-          <img src="img/jessica.jpeg" alt="A photo of Jessica.">
+          <img src="img/jessica.jpeg" width=100 height=100 alt="A photo of Jessica.">
         </a>
       </li>
     <ul>
+    <p>Below are some websites that I frequent:</p>
+    <a href="https://www.reddit.com">Reddit</a>
+    <a href="https://www.amazon.com">Amazon</a>
+    <a href="https://www.google.com">Google</a>
 
-    <p>Thanks for reading about me!</p>    
+    <p>Thanks for reading about me!</p>
   </body>
 </html>
