add styling to webapges

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <<link href="css/favorite-places-styles.css" rel="stylesheet" href="/css/master.css">
     <title>Michael's favorite things</title>
   </head>
   <body>
