--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/favorite-places-styles.css" rel="stylesheet" type="text/css"
     <title>Web page #1!</title>
   </head>
   <body>
@@ -20,8 +21,7 @@
 
     <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>.  It's a great school for learning web programming!</p>
 
-    <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
-
+    <p>Click these links for more information on my <a href="favorite-places.html">favorite places</a> or my <a href="favorite-things.html">favorite things.</a></p>
     <img src="img/kitten.jpeg" alt="A photo of a cute kitten.">
 
   </body>
