--- a/index.html
+++ b/index.html
@@ -1,51 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <<link href="css/favorite-places-styles.css" rel="stylesheet" href="/css/master.css">
-    <title>Michael's favorite things</title>
+    <link href="css/favorite-places-styles.css" rel="stylesheet" type="text/css"
+    <title>Web page #1!</title>
   </head>
   <body>
-    <h1>My favorite things</h1>
-    <h2>These are a few of my favorite things</h2>
+    <h1>My first web page</h1>
+    <h2>Written with the guidance of <em>Epicodus</em></h2>
 
-    <h3>People</h3>
-    <p>Here are some of my favorite <em>people</em>!</p>
-    <ul>
-      <li>
-        <a href="http://www.example.com/christopher.html">
-          My brother <strong>Christopher</strong>
-          <img src="img/christopher.jpeg" width=100 height=100 alt="A photo of Christopher.">
-        </a>
-      </li>
-      <li>
-        My mom and dad:
-        <ul>
-          <li>
-            <a href="http://www.example.com/steve.html">
-              <strong>Steve</strong>
-              <img src="img/steve.jpeg" height=100 width="100" " alt="A photo of Steve.">
-            </a>
-          </li>
-          <li>
-            <a href="http://www.example.com/carol.html">
-              <strong>Carol</strong>
-              <<img src="img/carol.jpeg" width=100 height=100 alt="A photo of Carol.">
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="http://www.example.com/jessica.html">
-          My friend <strong>Jessica</strong>
-          <img src="img/jessica.jpeg" width=100 height=100 alt="A photo of Jessica.">
-        </a>
-      </li>
-    <ul>
-    <p>Below are some websites that I frequent:</p>
-    <a href="https://www.reddit.com">Reddit</a>
-    <a href="https://www.amazon.com">Amazon</a>
-    <a href="https://www.google.com">Google</a>
+    <p>This is my  <strong>first webpage</strong>!</p>
+    <p>Isn't it nice? </p>
 
-    <p>Thanks for reading about me!</p>
+    <p>Here are some things I'm going to learn about coding:</p>
+    <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>And a lot more!</li>
+    </ul>
+
+    <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>.  It's a great school for learning web programming!</p>
+
+    <p>Click these links for more information on my <a href="favorite-places.html">favorite places</a> or my <a href="favorite-things.html">favorite things.</a></p>
+    <img src="img/kitten.jpeg" alt="A photo of a cute kitten.">
+
   </body>
 </html>
